tests/compile-errors/src/type-mismatch.stderr
error[E0277]: the trait bound `f32: Borrow<u8>` is not satisfied
 --> src/type-mismatch.rs:3:1
  |
3 | usdt::dtrace_provider!("../../../tests/compile-errors/providers/type-mismatch.d");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Borrow<u8>` is not implemented for `f32`
...
7 |     mismatch_bad!(|| (bad));
  |     ----------------------- in this macro invocation
  |
note: required by a bound in `__usdt_private_mismatch_bad_type_check`
 --> src/type-mismatch.rs:3:1
  |
3 | usdt::dtrace_provider!("../../../tests/compile-errors/providers/type-mismatch.d");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `__usdt_private_mismatch_bad_type_check`
...
7 |     mismatch_bad!(|| (bad));
  |     ----------------------- in this macro invocation
  = note: this error originates in the macro `mismatch_bad` (in Nightly builds, run with -Z macro-backtrace for more info)
